--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-project(HelloWorld)
+project(HelloGrpc)
 enable_testing()
 
-add_subdirectory("HelloWorld.Launcher")
+add_subdirectory("HelloGprc.Protos")
+add_subdirectory("HelloGrpc.Client")
+add_subdirectory("HelloGrpc.Server")
